testdata/valid/internal/infra/postgres/user_repo.go
package postgres

import (
	_ "github.com/kimtaeyun/testproject/internal/domain/user"
	_ "github.com/kimtaeyun/testproject/internal/infra/db"
)

func Repo() {}
